# Sparse_Bullshark

./: Cargo.toml  run_sparse.ps1
shared/: Cargo.toml  nodes.csv  public_keys.toml
shared/src/: initializer.rs  lib.rs  transaction_generator.rs  vrf.rs
shared/src/domain/: environment.rs  mod.rs  node.rs  transaction.rs
sparse_bullshark/: Cargo.toml
sparse_bullshark/src/: main.rs
sparse_bullshark/src/consensus/: bullshark.rs  dag.rs  mod.rs  ordering.rs  ordering_bullshark.rs  sparse_bullshark.rs
sparse_bullshark/src/crypto/: mod.rs  multisig.rs
sparse_bullshark/src/network/: broadcast.rs  message.rs  mod.rs
sparse_bullshark/src/types/: vertex.rs
sparse_bullshark/src/utils/: random.rs
